--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "scripts": {
     "build:prod": "ng build --prod",
-    "build:pub": "ng build --prod --output-path docs --base-href https://github.com/trainingit-introangular-ed2/training-projects-jmoniz",
+    "build:pub": "ng build --prod --output-path docs --base-href https://jmoniz.github.io/training-projects-jmoniz/",
     "http-server": "http-server ./dist/training-projects/ -c-1 -p4271 -a localhost -o",
     "e2e": "ng e2e",
     "lint": "ng lint",
